--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,10 @@ body {
   background: #ffe5f0;
   font-weight: 300;
 }
+
+audio{
+  color: #c594aa;
+}
 /* =======================================================
         Css de contact.html De Thony (es decir yo)
  ººººººLINEA 775 A 789 LO QUITE YO*/
@@ -27,6 +31,22 @@ body {
   height: 50px;
 }
 
+.estilo_titulo {
+
+  font-weight: bold; 
+  font-size: 30px; 
+  color: #c594aa; 
+  }
+/* .estilo_titulo{
+    font-weight: bold; font-size: 30px; 
+    background: #8f6277; 
+    -webkit-background-clip: text; 
+    -moz-background-clip: text; 
+    background-clip: text; 
+    color: transparent; 
+    text-shadow: 0px 3px 3px #c594aa ,0px -1px 1px rgba(0,0,0,0.3);
+    
+} */
 .btn-primary{
   transition: transform .2s;
 }
@@ -35,16 +55,24 @@ body {
   transform: scale(1.1);
 }
 
-
 #inputForm
 {
   border-radius: 5px 5px 5px 5px;
-  border: 1px solid pink;
-  background-color: #f0f6ff;
-  color:#8b38d4;
+  border: 1px solid #645f5f;
+  background-color: #fde8f6;
+  color: #000000;
 
 }
 
+textarea{
+  resize: vertical;
+ 
+}
+
+#botonTh{
+    background-color: #645f5f;
+    border: white;
+}
 
 /*
 * ======================================================= */
@@ -804,6 +832,11 @@ input[type="text"] {
 } */
 .btn.btn-default:hover, .btn.btn-default:focus, .btn.btn-default:active {
   border-color: transparent;
+}
+
+.btn-success{
+  width: 175px;
+  height:50px;
 }
 
 .social {
